fix weird shifting between pages

--- a/src/App.css
+++ b/src/App.css
@@ -14,19 +14,30 @@ body {
   padding-bottom: 100px;
   position: relative;
   background-color: white;
+  overflow-y: scroll;
   overflow-x: auto;
-  overflow-y: auto;
-
 }
 
 header {
   height: 150px;
 }
 
+html::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+html::-webkit-scrollbar-track {
+  background-color: transparent;
+  border-radius: 10px;
+}
+html::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 14px;
+}
+
 h1 {
   font-size: 50px;
   line-height: 140px;
-  /* margin-left: 70px; */
   margin-left: 10%;
 }
 
@@ -47,13 +58,11 @@ overflow-x: hidden;
 }
 
 .content_container {
-  /* margin: 20px 20px 50px 0; */
   text-indent: 30px;
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
-  /* border: 1px solid black; */
 }
 
 .self_intro {
@@ -119,6 +128,19 @@ overflow-x: hidden;
 
   .h2-tools {
     font-size: 26px;
+  }
+
+}
+
+@media (max-width: 1000px) {
+  .ce-dropdown-menu {
+    max-height: 300px;
+    width: 300px;
+    overflow-y: auto;
+  }
+
+  .filter-icon {
+    display: none;
   }
 
 }
