--- a/src/components/tools/CurrencyExchange/currencyExchange.css
+++ b/src/components/tools/CurrencyExchange/currencyExchange.css
@@ -1,6 +1,4 @@
 .h2-tools {
-/* margin-top: 40px;
-margin-bottom: 40px; */
 margin-top: 3%;
 margin-bottom: 3%;
 margin-left: 8%;
@@ -18,6 +16,7 @@ margin-left: 5px;
 transform: translate(0, -10px);
 }
 
+
 .search-bar-ce {
 margin-left: 15px;
 margin-right: 10px;
@@ -32,7 +31,7 @@ top: 0%;
 
 .input-search-bar-ce {
 margin-left: 5px;
-width: 350px;
+width: 250px;
 }
 
 .filter-icon {
@@ -68,10 +67,24 @@ margin-left: 10%;
 }
 
 .ce-dropdown-menu {
-    max-height: 300px;
-    max-width: 1000px;
-    min-width: 500px;
-  }
+  max-height: 300px;
+  max-width: 450px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.ce-dropdown-menu::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+.ce-dropdown-menu::-webkit-scrollbar-track {
+  background-color: rgb(218, 218, 218);
+  border-radius: 10px;
+}
+.ce-dropdown-menu::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 14px;
+}
 
 .ce-dropdown-custom-1 {
   width: 123px;
@@ -89,9 +102,8 @@ margin-left: 10%;
   margin-left: 2%
 }
 
-.ce-linechart {
+.ce-chart-container {
+  max-width: 1050px;
+  margin: auto;
   margin-top: 5%;
-  /* padding: 0 40px 0 40px; */
-  display: flex;
-  justify-content: center;
 }
